--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
 .github/**
 *.csv
 .DS_Store
+Data
+.ipynb_checkpoints
+__pycache__
+*.pkl
+*.cfg
+*.pptx
+*.docx
